pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
  labels:
    run: kuar-demo
spec:
  containers:
  - image: gcr.io/kuar-demo/kuard-amd64:1
    name: kuard
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
