ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: acme-http-prod-issuer
    certmanager.k8s.io/acme-challenge-type: http01
    # certmanager.k8s.io/cluster-issuer: acme-dns-prod-issuer
    # certmanager.k8s.io/acme-challenge-type: dns01
    # certmanager.k8s.io/acme-dns01-provider: r53dns-prod
spec:
  rules:
  - host: play.socifi.com
    http:
      paths:
      - backend:
          serviceName: kuard
          servicePort: 80
        path: /
  tls:
  - hosts:
      - "play.socifi.com"
    secretName: tls-prod-play-socifi-com
